examples/test/testpolicy4584.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4584
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key16: value20
      key15: value29
      key47: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value32
          key40: value45
      podSelector:
        matchLabels:
          key45: value1
